oxiplate-derive/tests/broken/writ/closed-like-statement-whitespace-remove.stderr
error: Expected the writ tag to be closed with `_}}`, `-}}`, or `}}`.
 --> tests/broken/writ/closed-like-statement-whitespace-remove.rs:4:27
  |
4 | #[oxiplate_inline("{{ foo -%}")]
  |                           ^^^
